Ajout de l'admin

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,8 +1,4 @@
 <google-map [center]="center" [zoom]="zoom">
-    <ng-container *ngFor="let garden of gardens$ | async">
-      <map-marker [position]="{ lat: garden.location.latitude, lng: garden.location.longitude }"
-                  [title]="garden.name">
-      </map-marker>
-    </ng-container>
+    <map-marker *ngFor="let position of markerPositions" [position]="position"></map-marker>
   </google-map>
   
