--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,13 +1,18 @@
-<form (ngSubmit)="signIn()" #loginForm="ngForm">
+<form class="login-form" (ngSubmit)="signIn()" #loginForm="ngForm">
     <div>
       <label for="email">Email</label>
       <input type="email" id="email" [(ngModel)]="email" name="email" required>
     </div>
     <div>
-      <label for="password">Password</label>
+      <label for="password">Mot de passe</label>
       <input type="password" id="password" [(ngModel)]="password" name="password" required>
     </div>
-    <button type="submit" [disabled]="!loginForm.form.valid">Login</button>
+    <div class="margin-login">
+      <span>Pas encore inscrit ? </span>
+      <a href="/signup">Inscription</a>
+    </div>
+    <div class="btn-center"><button class="btn-default" type="submit" [disabled]="!loginForm.form.valid">Connexion</button></div>
+    
     <div *ngIf="error">{{ error }}</div>
   </form>
   
