--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,20 +1,20 @@
-<form (ngSubmit)="signUp()" #signupForm="ngForm">
+<form (ngSubmit)="signUp()" #signupForm="ngForm" class="form-style">
   <div>
-    <label for="firstName">First Name</label>
+    <label for="firstName">Prénom</label>
     <input type="text" id="firstName" [(ngModel)]="firstName" name="firstName" required>
   </div>
   <div>
-    <label for="lastName">Last Name</label>
+    <label for="lastName">Nom</label>
     <input type="text" id="lastName" [(ngModel)]="lastName" name="lastName" required>
   </div>
   <div>
-    <label for="email">Emafil</label>
+    <label for="email">Email</label>
     <input type="email" id="email" [(ngModel)]="email" name="email" required>
   </div>
   <div>
-    <label for="password">Password</label>
+    <label for="password">Mot de passe</label>
     <input type="password" id="password" [(ngModel)]="password" name="password" required>
   </div>
-  <button type="submit" [disabled]="!signupForm.form.valid">Sign Up</button>
+  <div class="btn-center m-30-auto"><button type="submit" [disabled]="!signupForm.form.valid" class="btn-default">Inscription</button></div>
   <div *ngIf="error">{{ error }}</div>
 </form>
