--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,4 +1,5 @@
 <form (ngSubmit)="updateProfile()" #profileForm="ngForm" class="form-style">
+  <h2>Modifier mes données</h2>
     <div>
       <label for="firstName">Prénom</label>
       <input type="text" id="firstName" [(ngModel)]="firstName" name="firstName" required>
