--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,4 +1,5 @@
 <form (ngSubmit)="signUp()" #signupForm="ngForm" class="form-style">
+  <h2>Inscription</h2>
   <div>
     <label for="firstName">Prénom</label>
     <input type="text" id="firstName" [(ngModel)]="firstName" name="firstName" required>
