--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,70 @@
-<p>home works!</p>
-<app-map></app-map>
+<section class="hero">
+    <div class="hero-content">
+      <div class="hero-left">
+        <h1>Transformez votre ville en oasis verte</h1>
+        <p>Participez à la révolution du jardinage urbain et créez des espaces verts dans votre communauté.</p>
+        <button class="btn-black"><a href="/signup" >S'inscrire</a></button>
+      </div>
+      <div class="hero-right">
+        <img src="assets/images/plante.png" alt="">
+      </div>
+      
+    </div>
+  </section>
+  <section class="quick-intro">
+    <div class="intro-box">
+      <img src="assets/images/map.svg" alt="Créer un jardin">
+      <h3>Créer un jardin</h3>
+      <p>Démarrez votre propre espace vert urbain.</p>
+    </div>
+    <div class="intro-box">
+      <img src="assets/images/location.svg" alt="Trouver un jardin">
+      <h3>Trouver un jardin</h3>
+      <p>Découvrez les jardins près de chez vous.</p>
+    </div>
+    <div class="intro-box">
+      <img src="assets/images/group.svg" alt="Rejoindre une communauté">
+      <h3>Rejoindre une communauté</h3>
+      <p>Participez à des projets de jardinage collaboratifs.</p>
+    </div>
+    <div class="intro-box">
+      <img src="assets/images/ressources.svg" alt="Ressources éducatives">
+      <h3>Ressources éducatives</h3>
+      <p>Apprenez les meilleures pratiques de jardinage.</p>
+    </div>
+  </section>
+  <section class="why-urbanroots">
+    <h2>Pourquoi choisir <span>UrbanRoots</span> ?</h2>
+    <div class="benefits">
+      <div class="benefit m-top-15">
+        <img src="assets/images/communaute.svg" alt="">
+        <h3>Communauté Solidaire</h3>
+        <p>Rejoignez une communauté de jardiniers passionnés et partagez vos expériences.</p>
+      </div>
+      <div class="benefit">
+        <img src="assets/images/tools.svg" alt="">
+        <h3>Outils et Ressources</h3>
+        <p>Accédez à des ressources éducatives et à des outils pour vous aider à chaque étape.</p>
+      </div>
+      <div class="benefit">
+        <img src="assets/images/ecologique.svg" alt="">
+        <h3>Impact Écologique</h3>
+        <p>Participez à un mouvement qui rend nos villes plus vertes et plus vivables.</p>
+      </div>
+    </div>
+    
+  </section>
+  <section class="map-container">
+    <app-map></app-map>
+  </section>
+  <section class="signup-section">
+    <div class="signup-content">
+      <h2>Rejoignez 
+        <span>UrbanRoots</span> Aujourd'hui</h2>
+      <p>Participez à la transformation de nos villes en espaces verts durables. Rejoignez une communauté de jardiniers urbains passionnés et accédez à des ressources exclusives pour vous aider à cultiver votre jardin urbain.</p>
+      <button class="btn-green"><a href="/signup" class="signup-btn">S'inscrire</a></button>
+    </div>
+  </section>
+      
+
 
