--- a/src/app/components/approve-gardens/approve-gardens.component.html
+++ b/src/app/components/approve-gardens/approve-gardens.component.html
@@ -1,14 +1,13 @@
 <div>
-    <h2>Validation des jardins</h2>
-    <ul>
-      <li *ngFor="let garden of gardens$ | async">
-        <p>{{ garden.name }} - {{ garden.location }}</p>
-        <p>{{ garden.description }}</p>
-        <button (click)="approveGarden(garden.id)" *ngIf="!garden.approved">Accepter</button>
-        <button (click)="rejectGarden(garden.id)" *ngIf="!garden.approved">Refuser</button>
-        <p *ngIf="garden.approved">Validé</p>
-        <button (click)="deleteGarden(garden.id)" *ngIf="garden.approved">Supprimer</button>
-      </li>
-    </ul>
-  </div>
-  
+  <h2>Validation des jardins</h2>
+  <ul>
+    <li *ngFor="let garden of gardens$ | async">
+      <p>{{ garden.name }} - {{ garden.location }}</p>
+      <p>{{ garden.description }}</p>
+      <button type="button" (click)="approveGarden(garden.id)" *ngIf="!garden.approved">Accepter</button>
+      <button type="button" (click)="rejectGarden(garden.id)" *ngIf="!garden.approved">Refuser</button>
+      <p *ngIf="garden.approved">Validé</p>
+      <button type="button" (click)="deleteGarden(garden.id)" *ngIf="garden.approved">Supprimer</button>
+    </li>
+  </ul>
+</div>
