--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,3 +1,9 @@
 .info-window {
     max-width: 200px;
   }
+  .map-container {
+    width: 100%;
+    height: 500px; /* La hauteur que vous voulez pour votre carte */
+    max-width: 1200px; /* Vous pouvez limiter la largeur si nécessaire */
+    margin: 0 auto; /* Centrer la section si nécessaire */
+  }
