--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -1,9 +1,13 @@
 .form-style {
     width: 35%;
     padding: 20px;
-    background-color: #F8F7F2;
+    background-color: #85C484;
     margin: 100px auto;
     font-family: 'Nexalight', sans-serif;
+    border-radius: 26px;
+    color: #fff;
+    font-family: 'Nexa bold', sans-serif;
+
 }
 
 .form-style input[type="text"],
@@ -14,7 +18,7 @@
     margin: 10px 0;
     box-sizing: border-box;
     border: none;
-    border-radius: 4px;
+    border-radius: 26px;
     background-color: #fff;
     font-size: 16px;
     font-family: 'Nexalight', sans-serif;
@@ -55,5 +59,8 @@ input:-moz-autofill {
     margin: 30px auto;
 }
 .btn-center {
+    text-align: center;
+}
+.form-style h2 {
     text-align: center;
 }
