--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="hero">
     <div class="hero-content">
       <div class="hero-left">
-        <h1>Transformez votre ville en oasis verte</h1>
+        <h1>Faites naître un havre de nature en plein cœur de votre ville.</h1>
         <p>Participez à la révolution du jardinage urbain et créez des espaces verts dans votre communauté.</p>
         <button class="btn-black"><a href="/signup" >S'inscrire</a></button>
       </div>
@@ -42,7 +42,7 @@
         <p>Rejoignez une communauté de jardiniers passionnés et partagez vos expériences.</p>
       </div>
       <div class="benefit">
-        <img src="assets/images/tools.svg" alt="">
+        <img src="assets/images/book.svg" alt="">
         <h3>Outils et Ressources</h3>
         <p>Accédez à des ressources éducatives et à des outils pour vous aider à chaque étape.</p>
       </div>
