--- a/src/app/components/garden-form/garden-form.component.css
+++ b/src/app/components/garden-form/garden-form.component.css
@@ -2,7 +2,7 @@
     width: 35%;
     padding: 20px;
     background-color: #85C484;
-    margin: 100px auto;
+    margin: auto;
     font-family: 'Nexa bold', sans-serif;
     color: #fff;
     border-radius: 26px;
@@ -66,7 +66,7 @@ input:-moz-autofill {
 .garden-list {
     width: 60%;
     margin: auto;
-    padding-bottom: 200px;
+    padding: 0 0 100px;
 }
 .garden-list h2 {
     text-align: center;
@@ -105,4 +105,24 @@ input:-moz-autofill {
     font-family: 'Nexa bold', sans-serif;
     align-items: center;
   }
- 
+ .btn-add-garden {
+    text-align: center;
+    padding: 50px 0;
+ }
+ .btn-default-garden {
+    padding: 10px 20px;
+    color: #fff;
+    cursor: pointer;
+    background-color: #000;
+    border: none;
+    font-family: 'Nexalight', sans-serif;
+
+}
+.add-garden p {
+    font-family: 'Nexalight', sans-serif;
+    width: 64%;
+    text-align: center;
+    margin: auto;
+    padding-top: 100px;
+    font-size: 20px;
+}
