--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,4 +1,5 @@
-<google-map [center]="center" [zoom]="zoom" class="map-style">
+<div class="map-container" style="width: 100% !important; height: 500px !important;">
+<google-map [center]="center" [zoom]="zoom" class="map-style full-width-map">
   <map-marker
     *ngFor="let markerPosition of markerPositions; let i = index"
     [position]="markerPosition"
@@ -14,3 +15,4 @@
     </div>
   </map-info-window>
 </google-map>
+</div>
