--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -5,9 +5,9 @@
         </div>
         <div class="footer-1-ul">
             <ul>
-                <li>A propos</li>
-                <li>Mentions légales</li>
-                <li>Conditions d'utilisation</li>
+                <li><a href="/a-propos">A propos de nous</a></li>
+                <li><a href="/mentions-legales">Mentions légales</a></li>
+                <li><a href="conditions-utilisation">Conditions d'utilisation</a></li>
             </ul>
         </div>
         <div class="footer-1-ul">
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="footer-2">
-        <div class="left">2024 UrbanRoots. Tous droits réservés.</div>
+        <div class="left">&copy; 2024 UrbanRoots. Tous droits réservés.</div>
         <div class="right">
             <img src="assets/images/facebook.svg" alt="Facebook">
             <img src="assets/images/instagram.svg" alt="Instagram">
