--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,11 +6,17 @@
     font-family: 'Nexalight';
     src: url('../../public/assets/fonts/Nexa-ExtraLight.ttf') format('truetype');
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
     font-family: 'Nexalight', sans-serif;
     padding: 0;
     margin: 0;
 }
+.poppins-regular {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 .form-style {
     width: 35%;
     padding: 20px;
