--- a/src/app/components/calendar/calendar.component.css
+++ b/src/app/components/calendar/calendar.component.css
@@ -240,3 +240,90 @@
     font-family: 'Nexa Bold', sans-serif;
 
   }
+  @media (max-width: 768px) {
+    .calendar-container {
+      width: 100%;
+      padding: 0 10px 50px 10px;
+      margin: 0 auto;
+      max-width: 90%;
+    }
+    .list-events ul {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  
+    .calendar-header {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .calendar-header button {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 8px;
+      font-size: 1em;
+    }
+  
+    .calendar-header .month-name {
+      margin-bottom: 10px;
+      font-size: 1.2em;
+      text-align: center;
+      width: 100%;
+    }
+  
+    .calendar-grid {
+      grid-template-columns: repeat(7, 1fr);
+      grid-gap: 5px;
+      margin: 0 auto;
+    }
+  
+    .calendar-day,
+    .calendar-date {
+      padding: 10px 0;
+      font-size: 0.9em;
+      text-align: center;
+    }
+  
+    .calendar-date .day-number {
+      margin-left: 0px;
+    }
+  
+    .calendar-date .event {
+      padding: 3px;
+      margin-top: 3px;
+      font-size: 0.8em;
+    }
+  
+    .calendar-date .event .tooltip {
+      width: 150px;
+      padding: 8px;
+    }
+  
+    .view-toggle-buttons {
+      width: 100%;
+      margin: 30px 0;
+      text-align: center;
+    }
+  
+    ul {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+    }
+  
+    .pagination-controls {
+      flex-direction: column;
+      align-items: stretch;
+    }
+  
+    .pagination-controls button {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+  
+    .pagination-controls span {
+      margin-bottom: 10px;
+    }
+    .view-toggle-buttons {
+      text-align: center;
+    }
+  }
+  
