--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -64,3 +64,11 @@ input:-moz-autofill {
 .margin-btn-login {
     margin: 30px 0;
 }
+
+@media (max-width: 768px) {
+.login-form {
+    width: 80%;
+    padding: 20px;
+    margin: 50px auto;
+}
+}
