--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -48,6 +48,9 @@ body {
 .intro-box h3,.benefit h3, .why-urbanroots  h2, .signup-content h2 {
     font-family: 'Nexa bold', sans-serif;
 }
+.signup-content h2 {
+    font-size: 35px;
+}
 .intro-box p, .benefit p, .signup-content p {
     font-family: 'Nexalight', sans-serif;
 }
@@ -106,5 +109,47 @@ body {
     height: 500px;
     max-width: 90%;
     margin: 0 auto;
-    padding: 100px;
+    padding: 100px 0;
+  }
+  @media (max-width: 768px) {
+    .hero-content {
+        display: block;
+        padding: 50px;
+    }
+    .hero-left {
+        width: 100%;
+    text-align: center;
+    }
+    .hero-right img {
+        width: 300px;
+        max-width: 100%;
+        margin-top: 30px;
+    }
+    .hero-right {
+        width: 100%;
+
+    }
+    .quick-intro {
+        display: block;
+    }
+    .benefits {
+        display: block;
+    }
+    .map-container {
+        padding: 0;
+        max-width: 80%;
+    }
+    .signup-content, .quick-intro, .why-urbanroots, .m-top-15 {
+        padding: 50px;
+    }
+    .benefit {
+        margin: 80px 0;
+        padding: 0 50px;
+    }
+    .signup-content p {
+        margin: 30px auto 50px;
+    }
+    .intro-box {
+        margin-bottom: 60px;
+    }
   }
